常用联系人增加编辑功能

--- a/js/pages/user/frequent-contact-list.html
+++ b/js/pages/user/frequent-contact-list.html
@@ -41,8 +41,8 @@
             </div>
             <hr style="border: 1px solid #ddd;border-width: 1px 0 0 0">
             <div>
-                <!--<img src="img/edit.png" class="btn-operate"  ms-click="edit($index)">-->
                 <img src="img/delete.png" class="btn-operate"  ms-click="del($index)">
+                <img src="img/edit.png" class="btn-operate"  ms-click="edit($index)">
             </div>
         </div>
     </div>
