个人中心去掉两个按钮

--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -30,8 +30,8 @@
                 <div class="grid-img" style="background-color: #a19a8a;">
                     <img src="../img/icon/controller.png" style="margin-top: 8px;margin-left: 1px;" />
                 </div>
-                <div class="grid-text">遥控器</div>
-            </div> -->
+                <div class="grid-text">遥控器</div>-->
+            </div> 
         </div>
         <div style="clear: both;"></div>
         <ul class="mui-table-view mui-grid-view mui-grid-9 icon" style="background-color: #fafafa;">
