调整登录注册页面样式

--- a/js/pages/register/register-1.html
+++ b/js/pages/register/register-1.html
@@ -23,13 +23,17 @@
 		font-size: 24px;
 		line-height: 36px;
 	}
+	button{
+		background-color: black !important;
+		border: 1px solid black !important;
+	}
 </style>
 <div style="background: url('img/11111.jpg') center;background-size: cover;height: 100vh;width: 100vw;padding: 50px;">
 	<div class="mui-text-center" style="margin:0 auto;" ms-controller="phone">
 		<br />
 	    <input type="tel" placeholder="输入手机号码" ms-duplex="phone" id="ipt">
 	    <br />
-	    <p class="text-white"><span>我已阅读并同意</span><a href="javascript:void(0)" ms-on-tap="clickA">用户协议</a></p>
+	    <p class="text-white"><span>我已阅读并同意</span><a href="javascript:void(0)" ms-on-tap="clickA" class="bs-text-gold">用户协议</a></p>
 	    <br />
 	    <button class="mui-btn mui-btn-danger mui-btn-block" ms-click="goVertify">下一步</button>
 	</div>
