--- a/js/pages/order/orderList.html
+++ b/js/pages/order/orderList.html
@@ -1,49 +1,66 @@
+<style>
+.first-icon {
+    display: inline-block;
+    width: 22px;
+    height: 22px;
+    background-image: url('../img/horn.png');
+    background-size: cover;
+    position: relative;
+    top: 6px;
+    margin-right: 3px;
+}
+
+.order-ud {
+    margin: 20px 0 0 10px;
+}
+</style>
 <div ms-controller="orders">
     <div style="padding-left: 10px;background: #fff;">
-        <div style="display: inline-block;width: 12px;height: 12px;background-image: url('../img/horn.png');background-size: cover;position: relative;top: 3px;"></div>
-        <span class="bs-text-smaller">
+        <div class="first-icon"></div>
+        <span class="bs-text-smaller" style="margin: 12px 0 12px 0; display: inline-block;">
             点击退房之后，才可以开发票哦！
         </span>
     </div>
-    <span class="order-title bs-text-large bs-text-153" style="margin-bottom: 0px;">当前订单</span>
+    <span class="order-title order-ud bs-text-large bs-text-153">当前订单</span>
     <ul class="order-list" style="margin-bottom: 0px;">
-        <li class="order-item bs-text-large bs-text-153" ms-if="list1.length == 0">暂无订单
+        <li class="order-item bs-text-large bs-text-153" style="margin-top: 0px; padding-top: 20px;" ms-if="list1.length == 0">暂无订单
         </li>
-        <li class="order-item" ms-repeat="list1" ms-if="list1.length!=0" ms-click="goDetail(el.id)">
+        <li class="order-item" style="padding-bottom: 15px;" ms-repeat="list1" ms-if="list1.length!=0" ms-click="goDetail(el.id)">
             <span class="status bs-text-smaller">{{showStatus(el.status)}}</span>
             <div id="triangle"></div>
-            <span class="bs-text-large bs-text-51">{{el.hotel.name}}</span>
-            <h5 class="bs-text-small bs-text-102" style="margin-top: 10px;">
+            <span class="bs-text-large bs-text-51" style="display: inline-block; margin: 10px 0 20px 0;">{{el.hotel.name}}</span>
+            <h5 class="bs-text-small bs-text-102" style="margin: 0 0 14px 0;">
                 {{el.orderRoomList[0].name}}
                 <span ms-if="el.orderRoomList.length>1">等{{el.orderRoomList.length}}间房</span>
                 <br>
-                <span style="display: inline-block; margin-top: 4px;">
+                <span style="display: inline-block; margin-top: 8px;">
                     {{formatDate(el.orderRoomList[0].startTime)}} - {{formatDate(el.orderRoomList[0].endTime)}}
                 &nbsp;&nbsp;共{{el.orderRoomList[0].timeCount}}晚
                 </span>
             </h5>
-            <button class=" bs-text-small" type="button" style="margin: 0;" ms-click="goDetail(el.id)">{{showActionText(el.status)}}</button>
-            <span class="bs-text-large bs-text-red" style="float: right; margin: 8px 10px 0 0;">¥{{el.needAmount}}</span>
+            <button class="bs-text-small" type="button" style="margin: 0;" ms-click="goDetail(el.id)">{{showActionText(el.status)}}</button>
+            <span class="bs-text-large bs-text-red" style="float: right; margin: 3px 10px 0 0;">¥{{el.needAmount}}</span>
         </li>
     </ul>
-
-    <span class="order-title bs-text-large bs-text-153" style="margin: 0 0 0 10px;">历史订单</span>
-    <ul class="order-list">
-        <li class="order-item bs-text-large bs-text-153" ms-if="list2.length == 0">暂无订单
+    <span class="order-title bs-text-large bs-text-153" style="margin: 10px 0 20px 10px;">历史订单</span>
+    <ul class="order-list" style="margin-bottom: 0px;">
+        <li class="order-item bs-text-large bs-text-153" style="margin-top: 0px; padding-top: 20px;" ms-if="list2.length == 0">暂无订单
         </li>
-        <li class="order-item" ms-repeat="list2" ms-if="list2.length!=0" ms-click="goDetail(el.id)">
-            <span class="status">{{showStatus(el.status)}}</span>
+        <li class="order-item" style="padding-bottom: 15px;" ms-repeat="list2" ms-if="list2.length!=0" ms-click="goDetail(el.id)">
+            <span class="status bs-text-smaller">{{showStatus(el.status)}}</span>
             <div id="triangle"></div>
-            <span>{{el.hotel.name}}</span>
-            <h5>
+            <span class="bs-text-large bs-text-51" style="display: inline-block; margin: 10px 0 20px 0;">{{el.hotel.name}}</span>
+            <h5 class="bs-text-small bs-text-102" style="margin: 0 0 14px 0;">
                 {{el.orderRoomList[0].name}}
                 <span ms-if="el.orderRoomList.length>1">等{{el.orderRoomList.length}}间房</span>
                 <br>
-                {{formatDate(el.orderRoomList[0].startTime)}} - {{formatDate(el.orderRoomList[0].endTime)}}
-                &nbsp;共{{el.orderRoomList[0].timeCount}}晚
+                <span style="display: inline-block; margin-top: 8px;">
+                    {{formatDate(el.orderRoomList[0].startTime)}} - {{formatDate(el.orderRoomList[0].endTime)}}
+                &nbsp;&nbsp;共{{el.orderRoomList[0].timeCount}}晚
+                </span>
             </h5>
-            <span>¥{{el.needAmount}}</</span>
-            <button type="button" ms-if="!(el.status==4&&el.iscomment==1)" ms-click="goDetail(el.id)">{{showActionText(el.status)}}</button>
+            <button class="bs-text-small" type="button" style="margin: 0;" ms-if="!(el.status==4&&el.iscomment==1)" ms-click="goDetail(el.id)">{{showActionText(el.status)}}</button>
+            <span class="bs-text-large bs-text-red" style="float: right; margin: 3px 10px 0 0;">¥{{el.needAmount}}</</span>
         </li>
     </ul>
 </div>
