--- a/js/pages/order/orderList.html
+++ b/js/pages/order/orderList.html
@@ -26,7 +26,7 @@
         <li class="order-item bs-text-large bs-text-153" style="margin-top: 0px; padding-top: 20px;" ms-if="list1.length == 0">暂无订单
         </li>
         <li class="order-item" style="padding-bottom: 15px;" ms-repeat="list1" ms-if="list1.length!=0" ms-click="goDetail(el.id)">
-            <span class="status bs-text-smaller">{{showStatus(el.status)}}</span>
+            <span class="status bs-text-smaller bs-text-white">{{showStatus(el.status)}}</span>
             <div id="triangle"></div>
             <span class="bs-text-large bs-text-51" style="display: inline-block; margin: 10px 0 20px 0;">{{el.hotel.name}}</span>
             <h5 class="bs-text-small bs-text-102" style="margin: 0 0 14px 0;">
