--- a/js/util/pop.html
+++ b/js/util/pop.html
@@ -1,6 +1,11 @@
 <style>
+    .mui-grid-view.mui-grid-9 {
+        background-color: #fff;
+    }
     .mui-grid-view.mui-grid-9 .mui-table-view-cell {
         border-color: #ddd;
+        border-bottom: none;
+        border-top: 1px solid #ddd;
     }
 </style>
 <div id="popModule" style="display: none;" class="hide" ms-controller="aside" >
@@ -37,13 +42,13 @@
         </div>
 
         <ul class="mui-table-view mui-grid-view mui-grid-9 icon bs-bg-white">
-            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-on-tap="clickA(3)" ms-if="!isManage">
+            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-on-tap="clickA(3)" ms-visible="!isManage">
                 <a href="javascript:void(0)">
                     <img src="../img/icon/service.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">服务</div>
                 </a>
             </li>
-            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-on-tap="clickA(2)" ms-if="!isManage">
+            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-on-tap="clickA(2)" ms-visible="!isManage">
                 <a href="javascript:void(0)">
                     <img src="../img/icon/order.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">订单</div>
@@ -55,31 +60,37 @@
                     <div class="bs-text-smaller bs-text-black">个人信息</div>
                 </a>
             </li>
-            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-on-tap="clickA(4)" ms-if="!isManage">
+            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-on-tap="clickA(4)" ms-visible="!isManage">
                 <a href="javascript:void(0)">
                     <img src="../img/icon/fund.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">体验基金</div>
                 </a>
             </li>
-            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-on-tap="clickA(8)" ms-if="!isManage">
+            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-on-tap="clickA(8)" ms-visible="!isManage">
                 <a href="javascript:void(0)">
                     <img src="../img/icon/shopping.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">购物</div>
                 </a>
             </li>
-            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-on-tap="clickA(5)" ms-if="isAdmin==1&&!isManage">
+            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-on-tap="clickA(5)" ms-visible="isAdmin==1&&!isManage">
                 <a href="javascript:void(0)" >
                     <img src="../img/icon/switch.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">管理模式</div>
                 </a>
             </li>
-            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-on-tap="clickA(7)" ms-if="isManage">
+            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-visible="isAdmin!=1&&!isManage">
+                <a href="javascript:void(0)" style="display: none;">
+                    <img src="../img/icon/switch.png" class="grid-icon" />
+                    <div class="bs-text-smaller bs-text-black">管理模式</div>
+                </a>
+            </li>
+            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-on-tap="clickA(7)" ms-visible="isManage">
                 <a href="javascript:void(0)" >
                     <img src="../img/iconfont-jiudian.svg" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">更多酒店</div>
                 </a>
             </li>
-            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-on-tap="clickA(6)" ms-if="isManage">
+            <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" ms-on-tap="clickA(6)" ms-visible="isManage">
                 <a href="javascript:void(0)" >
                     <img src="../img/icon/switch.png" class="grid-icon" />
                     <div class="bs-text-smaller bs-text-black">下单模式</div>
