--- a/js/util/partTime.html
+++ b/js/util/partTime.html
@@ -10,7 +10,7 @@
         </a>
     </div>
 
-    <div class="mui-table-view" ms-visible="statusControl.isTimeListShow" style="text-align: left;">
+    <div id="partTimePanel" class="mui-table-view" ms-visible="statusControl.isTimeListShow" style="text-align: left;">
         <div class="select-time" id='select_time'>
             <b>&nbsp;</b>
             <div ms-repeat="timeList">
