地址搜索栏bug修复

--- a/js/pages/index/searchLocation.html
+++ b/js/pages/index/searchLocation.html
@@ -45,7 +45,7 @@ hr {
     <section class="search-panel" style="height: 70vh;">
         <div style="height: 40px;">
             <span class="mui-icon mui-icon-search" style="position: absolute; margin: 8.5px 12.5px;"></span>
-            <input type="search" ms-attr-placeholder="'搜索' + city + '的街道、地标'">
+            <input id="tipinput" type="search" ms-attr-placeholder="'搜索' + city + '的街道、地标'">
         </div>
         <section class="search-location" ms-click="getCurrentPosition">
             <span class="mui-icon mui-icon-location"></span>&nbsp;
