--- a/js/util/roomSlide-hotel.html
+++ b/js/util/roomSlide-hotel.html
@@ -1,5 +1,5 @@
 <div class="mui-text-left slide-info">
-    <span class="slide-address bs-text-large" ms-on-tap="goRoom(el.id)">{{el.hotel.address}}</span><br>
+    <span class="slide-address bs-text-large" ms-on-tap="goRoom(el.id)">{{el.hotel.address|truncate(8,'...')}}</span><br>
     <span class="slide-room bs-text-gray bs-text-normal" ms-on-tap="goRoom(el.id)">{{el.name}}</span>
     <span class="bs-text-yellow bs-text-normal">★★★★★</span>
     <div class="bs-text-large" ms-on-tap="goHotelById(el.hotel.id)">
