分享细则页样式修改

--- a/js/pages/invite/rule.html
+++ b/js/pages/invite/rule.html
@@ -4,9 +4,18 @@
     margin-left: auto;
     margin-right: auto;
     transition: margin-top 100ms;
+    background: #fff;
+    overflow-y: scroll;
+}
+.content-rule li {
+    font-size: 15px;
+}
+.content-rule li p{
+    font-size: 12px;
+    color: #000;
 }
 </style>
-<div class="content-rule">
+<div class="content-rule bs-text-black">
     <div class="mui-content-padded" style="padding: 1rem;">
         <h4>推荐条款细则：</h4>
         <ol>
