--- a/js/pages/wallet/wallet.html
+++ b/js/pages/wallet/wallet.html
@@ -78,7 +78,7 @@
     </div>
 
     <div style="padding:5px;text-align:center;font-size: 14px;position: fixed;bottom: 0;width: 100%;background-color: #efeff4;">
-        <a id="rulePop" ms-on-tap="clickRule" style="display: block; color: #cc9966;">使用说明</a>
+        <a id="rulePop" ms-click="openRule" style="display: block; color: #cc9966;">使用说明</a>
     </div>
 </div>
 
