时间选择面板样式修改

--- a/js/pages/room/room.html
+++ b/js/pages/room/room.html
@@ -38,7 +38,7 @@
                     <button class="mui-btn" style="width: 100px;margin-bottom: 30px; border-radius: 0;" ms-on-tap="openAssess">更多信息</button>
                 </div>
             </section>
-            <section class="time">
+            <section class="room-time">
                 <p>
                     <span>入住时间</span>
                     <span style="float: right">退房时间</span>
