--- a/js/util/calendar.html
+++ b/js/util/calendar.html
@@ -1,11 +1,11 @@
 <div class="filter-row mui-control-content mui-active" ms-controller="calendar">
      <div class="time">
         <a id="select_start" href="###" ms-on-touchend="startClick" ms-class="selected: statusControl.isStartEdit">
-            入住时间<br><small ms-class="mui-text-danger:!statusControl.isStartEdit">{{startIndex==-1?'选择日期':(calendar[startIndex]?calendar[startIndex].date:'&nbsp;')}}</small>
+            入住时间<br><small ms-class="bs-text-black:!statusControl.isStartEdit">{{startIndex==-1?'选择日期':(calendar[startIndex]?formatDate(calendar[startIndex].date):'&nbsp;')}}</small>
         </a>
         <i></i>
         <a id="select_end" href="###" ms-on-touchend="endClick" ms-class="selected: statusControl.isEndEdit">
-            退房时间<br><small ms-class="mui-text-danger:!statusControl.isEndEdit">{{endIndex==-1?'选择日期':(calendar[endIndex]?calendar[endIndex].date:'&nbsp;')}}</small>
+            退房时间<br><small ms-class="bs-text-black:!statusControl.isEndEdit">{{endIndex==-1?'选择日期':(calendar[endIndex]?formatDate(calendar[endIndex].date):'&nbsp;')}}</small>
         </a>
     </div>
 
