--- a/js/pages/user/frequent-contact-add.html
+++ b/js/pages/user/frequent-contact-add.html
@@ -22,21 +22,14 @@
 </style>
 <div ms-controller="contactAdd">
     <div class="mui-table-view mui-input-group">
-        <div class="mui-table-view-divider divider1">
-            身份信息
+        <div class="mui-input-row">
+            <input type="text" ms-duplex="name" name="name" class="mui-input-clear bs-text-smaller" placeholder="姓名">
         </div>
         <div class="mui-input-row">
-            <label>姓 名</label>
-            <input type="text" ms-duplex="name" name="name" class="mui-input-clear" placeholder="姓名">
+            <input type="tel" ms-duplex="mobile" name="mobile" class="mui-input-clear bs-text-smaller" placeholder="11位有效手机号">
         </div>
         <div class="mui-input-row">
-            <label>手机号</label>
-            <input type="tel" ms-duplex="mobile" name="mobile" class="mui-input-clear" placeholder="11位有效手机号">
-        </div>
-        <div class="mui-table-view-divider divider2">认证信息</div>
-        <div class="mui-input-row">
-            <label>身份证号</label>
-            <input type="text" ms-duplex="idNo" name="ID" class="mui-input-clear" placeholder="身份证号">
+            <input type="text" ms-duplex="idNo" name="ID" class="mui-input-clear bs-text-smaller" placeholder="身份证号">
         </div>
     </div>
 </div>
