弹窗按钮、房间添加入住人弹框样式修改

--- a/js/pages/room/pop-btn.html
+++ b/js/pages/room/pop-btn.html
@@ -5,10 +5,10 @@
 	}
 </style>
 <div style="position: fixed;bottom: 20px;width: 100%;" class="mui-text-center" ms-controller="aInfoBtn">
-	<button class="popover-Button mui-btn mui-btn-danger mui-btn-outlined" onclick="$('.popover').addClass('popover-hide');popover_ishide = true;">
+	<button class="popover-Button mui-btn mui-btn-outlined bs-text-white" onclick="$('.popover').addClass('popover-hide');popover_ishide = true;">
 		取消
 	</button>&emsp;
-	<button class='popover-Button mui-btn mui-btn-danger mui-btn-outlined' ms-click="select">
+	<button class='popover-Button mui-btn mui-btn-outlined bs-text-gold' style="border-color: #baa071;" ms-click="select">
 		{{selectText}}
 	</button>
 </div>
