--- a/js/util/contactList.html
+++ b/js/util/contactList.html
@@ -2,29 +2,21 @@
     .flex0 {
         width: 85px;
     }
-    h5{
+    h5 {
         color: black;
-    }
-    .selected:before {
-        color: #dd524d !important;
     }
     .mui-popup {
         position: fixed;
     }
 
     .mui-table-view-divider{
-        position: relative;
+        position: initial;
+        padding-top: 14px;
+        font-weight: 100;
+        color: #000;
+        background-color: #fff;
     }
-    @supports(position: -webkit-sticky){
-        .mui-table-view-divider{
-            position: -webkit-sticky;
-            top: 44px;
-            z-index: 9999;  
-        }
-        .divider1 {
-            top: 44px;
-        }
-    }
+
     .img-save{
         width: 20px;
         height: 20px;
@@ -35,26 +27,26 @@
 </style>
 <div ms-controller="contactList">
     <div class="mui-table-view mui-input-group" style="margin-top: 10px;color: #000;">
-        <div class="mui-table-view-divider divider1 bs-text-normal">
-            新增入住人
-            <img src="img/add.png" class="img-save" ms-click="save">
+        <div class="mui-table-view-divider bs-text-normal">
+            添加入住人
+            <img src="img/circlePlus.png" class="img-save" ms-click="save">
         </div>
         <div class="mui-input-row">
-            <input type="text" ms-duplex="name" name="name" class="mui-input-clear bs-text-smaller" placeholder="姓名">
+            <input type="text" ms-duplex="name" name="name" class="bs-text-black bs-text-smaller" placeholder="填写姓名">
         </div>
         <div class="mui-input-row">
-            <input type="tel" ms-duplex="mobile" name="mobile" class="mui-input-clear bs-text-smaller" placeholder="手机号">
+            <input type="tel" ms-duplex="mobile" name="mobile" class="bs-text-black bs-text-smaller" placeholder="填写手机号">
         </div>
         <div class="mui-input-row">
-            <input type="text" ms-duplex="idNo" name="ID" class="mui-input-clear bs-text-smaller" placeholder="身份证号">
+            <input type="text" ms-duplex="idNo" name="ID" class="bs-text-black bs-text-smaller" placeholder="填写身份证号">
         </div>
     </div>
 
-    <div style="height: 55vh;overflow-y: scroll;">
-        <div class="mui-table-view" style="margin-top: 10px" ms-repeat="list">
+    <div style="height: 55vh;overflow-y: scroll;margin-top: 10px;">
+        <div class="mui-table-view" ms-repeat="list">
             <div class="mui-table-view-cell mui-checkbox mui-right" ms-data-index="$index" style="z-index: 9;">
                 <input type="checkbox" ms-duplex-number="selectedList" ms-attr-value="$index" class="selected"
-                       style="z-index: 1">
+                       style="z-index: 1; top: 12px;">
                 <div class="mui-slider-handle">
                     <div class="display-flex mui-table-cell">
                         <h5 class="flex1 bs-text-smaller">{{el.name}}</h5>
