--- a/js/pages/order/order.html
+++ b/js/pages/order/order.html
@@ -104,7 +104,10 @@ input[type=checkbox] {
                     <span style=" margin-top: 8px;" ms-repeat-cl="el.orderCustomerList">{{cl.name}}&nbsp;</span>
                     <br>
                     <!-- 是否评论 -->
-                    <span class="bs-text-large bs-text-black" style="float: left; margin-top: 20px;" ms-if="el.status==3||el.status==4">{{el.isComment?'已评论':'未评论'}}</span>
+                    <span class="bs-text-large bs-text-black" style="float: left; margin-top: 20px;" ms-if="(el.status==3||el.status==4)&&(el.isComment)">已评价</span>
+                    <!-- 操作按钮 -->
+                    <button class="bs-text-small" type="button" ms-on-tap="orderRoomAction(el.status, el.id)" ms-if="el.status>=2&&el.status<=4&&!el.isComment" style="float: left;margin: 0px;margin-top: 12px;">{{showActionText(el.status)}}</button>
+                    <!-- 房间价格 -->
                     <span class="bs-text-large bs-text-red" style="float: right; margin: 20px 15px 0 0;">¥{{el.amount}}</</span>
                 </h5>
                 <span style="clear: both;">&nbsp;</span>
